work_layout: removing work-instances padding on small screens to avoid horizontal scroll

--- a/app/modules/entities/scss/_work_layout.scss
+++ b/app/modules/entities/scss/_work_layout.scss
@@ -15,7 +15,10 @@
   }
   .work-instances{
     @include display-flex(column, center, space-around);
-    padding: 2em;
+    /*Large screens*/
+    @media screen and (min-width: $small-screen) {
+      padding: 2em;
+    }
   }
   > .items-lists, .entityActions{
     margin-top: 2em;
